===========================================================================
MARK: released gwenhywfar-1.99.0 (2005/11/22)
===========================================================================


2005/11/21: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- improved to GWEN_NetLayerHttp_Request() [nl_http.c]:
  - intermediate packets (like "100 Continue") are now ignored
  - when the final response indicates to close the connection (via header
    "Connection: close" or when this header is omitted in HTTP/1.0)
    then the connection is closed automatically. This way the next try to
    send a packet via this connection would fail. Callers will always
    check for the connection status before sending packets, so in this case
    they will just reopen the connection. We should now finally get rid of the
    ominous "timeout" problem in AqHBCI
- fixed a bug in HTTP write work function: Was always returning "Changed",
  even if there was nothing to write. This caused up to 100% CPU 
  consumption
- introduced brake to avoid CPU overload by GWEN_Net_HeartBeat()
- entered cleanup phasis:
  - implemented destructors for netlayers
  - fixed memory leaks found by valgrind


2005/11/18: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_NetLayerSsl_ImportCertFile() (this will make it easier
  to import certificate files)
- implemented poll()-based code which checks whether a connection is down
  (as suggested by Thomas Baumgart)
- changed HTTP code: Now tries to detect when a connection is broken while
  trying to send a packet (detects the special condition when the connection
  is broken while sending the first byte of a packet. In such a case a
  reconnect would be in order, while a broken pipe after having written some
  bytes is still an error)
- switched from autopoint to what we use in AqBanking: autopoint doesn't